k8s/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: saaskit
spec:
  selector:
    matchLabels:
      app: saaskit
  replicas: 1
  template:
    metadata:
      labels:
        app: saaskit
    spec:
      containers:
        - name: all-services
          image: ghcr.io/smartnuance/saas-kit:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8800
          volumeMounts:
            - mountPath: /app/secret/prod
              name: env
      volumes:
        - name: env
          secret:
            secretName: saaskit-env
