k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: saaskit
spec:
  ports:
    - port: 8000
      targetPort: 8800
      protocol: TCP
  type: ClusterIP
  selector:
    app: saaskit
